--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -32,7 +32,7 @@
         <item android:id="@+id/messages"
             android:orderInCategory="100"
             android:title="Messages"
-            app:showAsAction="always"
+            android:showAsAction="always"
             android:layout_weight="1"
             android:visible="true" />
 
