--- a/app/src/main/res/layout/activity_facility.xml
+++ b/app/src/main/res/layout/activity_facility.xml
@@ -4,22 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-
+    <ImageView
+        android:id="@+id/facility_pic"
+        android:layout_width="450px"
+        android:layout_height="300px"
+        android:adjustViewBounds="true"
+        android:cropToPadding="true"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/holy_cross"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_marginTop="80dp"
+        android:layout_height="wrap_content"
         android:background="@color/textColorSec"
         android:id="@+id/info_layout"
-        android:layout_alignTop="@+id/facility_pic"
+        android:layout_below="@+id/facility_pic"
         android:layout_alignParentStart="true"
-        android:layout_height="130dp">
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp">
 
         <TextView
             android:text="Holy Cross Senior Living"
-            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/facility_name"
@@ -52,54 +60,32 @@
             android:textAlignment="center" />
     </LinearLayout>
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="105dp"
+        android:src="@drawable/hc_map1"
+        android:id="@+id/map_screenshot"
+        android:layout_below="@+id/info_layout"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="125dp"
+        android:src="@drawable/calendar_screenshot"
+        android:id="@+id/calendar_screenshot"
+        android:layout_below="@+id/map_screenshot"
+        android:layout_alignParentStart="true" />
+
     <TextView
         android:text="Announcements"
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:layout_marginBottom="45dp"
         android:id="@+id/announcements"
         android:textAlignment="center"
         android:background="@color/textColorSec"
         android:textColor="@color/textColorPrim"
         android:textSize="14sp"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/calendar_screenshot"
         android:layout_alignParentStart="true" />
-
-    <ImageView
-        app:srcCompat="@drawable/holy_cross"
-        android:id="@+id/facility_pic"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true"
-        android:cropToPadding="true"
-        android:layout_marginTop="24dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_height="400px"
-        android:layout_width="600px" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/calendar_screenshot"
-        android:id="@+id/calendar_screenshot"
-        android:layout_marginTop="99dp"
-        android:layout_alignTop="@+id/map_screenshot"
-        android:layout_alignParentStart="true" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/hc_map1"
-        android:id="@+id/map_screenshot"
-        android:layout_alignTop="@+id/info_layout"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="85dp" />
-
-    <!--include android:id="@+id/main_tab" layout="@layout/main_tab"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_alignParentBottom="true"
-        android:visibility="visible"/-->
 
     <include android:id="@+id/toolbar" layout="@layout/toolbar"
         android:layout_height="30dp"
