--- a/app/src/main/res/layout/updates_tab.xml
+++ b/app/src/main/res/layout/updates_tab.xml
@@ -18,7 +18,7 @@
         <SearchView
             android:id="@+id/Triangle_Search"
             android:layout_width="match_parent"
-            android:layout_height="30dp" />
+            android:layout_height="50dp" />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -36,27 +36,28 @@
                 android:layout_height="100dp"
                 android:background="#FFFFFF" />
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="156dp"
-                android:layout_height="138dp"
-                app:srcCompat="@mipmap/app_logo"
-                tools:layout_gravity="center" />
-
             <ImageButton
                 android:id="@+id/new_update_button"
                 android:src="@drawable/ic_control_point_black_24dp"
                 android:background="@color/colorPrimary"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:text="Button" />
+                android:scaleType="fitXY"/>
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="164dp"
+                android:layout_height="146dp"
+                android:layout_gravity="center"
+                android:src="@mipmap/app_logo"
+                android:layout_marginBottom="7dp"/>
         </FrameLayout>
 
         <TextView
             android:id="@+id/status_Text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.55"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Status Updates"
@@ -69,10 +70,11 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.62"
             android:text="Last Update on November 1 at 9:45 AM by Caretaker Lou Holtz"
             android:textAlignment="center"
             android:textColor="@color/textColorPrim" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
